# harland-chess-trainer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/src/: lib.rs  main.rs
app/src-ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src-ui/src/: App.css  App.tsx  main.tsx  test-setup.ts
app/src-ui/src/__tests__/: puzzleBoard.test.ts  puzzlePage.test.ts  statsPage.test.ts  syncStages.test.ts
app/src-ui/src/api/: analysis.ts  lichess.ts  puzzles.ts  settings.ts  sync.ts
app/src-ui/src/components/: PuzzleBoard.tsx
app/src-ui/src/hooks/: useSyncProgress.ts
app/src-ui/src/pages/: AboutPage.tsx  PuzzlePage.tsx  SettingsPage.tsx  StatsPage.tsx  SyncPage.tsx
app/src-ui/src/utils/: syncStages.ts
crates/chess-core/: Cargo.toml
crates/chess-core/src/: lib.rs  mistakes.rs  pgn.rs
crates/chess-core/tests/: mistake_properties.rs  pipeline_integration.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  parse.rs
crates/engine/tests/: stockfish_integration.rs
crates/lichess-client/: Cargo.toml
crates/lichess-client/src/: lib.rs  types.rs
crates/lichess-client/tests/: fetch_games.rs
crates/lichess-client/tests/fixtures/: sample_games.ndjson
crates/puzzle-gen/: Cargo.toml
crates/puzzle-gen/src/: filters.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_evaluations.sql  0003_mistakes.sql  0004_puzzles.sql  0005_attempts.sql  0006_settings.sql
crates/storage/src/: lib.rs
crates/storage/tests/: verify_attempts.rs  verify_db.rs  verify_settings.rs
docs/: ANALYSIS.md  ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PUZZLES.md  README.md  VERSIONING.md
resources/stockfish/: COPYING  README.md
