[package]
name = "puzzle-gen"
version = "0.1.0"
edition = "2021"
description = "Puzzle generation from analyzed chess games with quality filtering."
license = "GPL-3.0-only"

[dependencies]
engine = { path = "../engine" }
shakmaty = "0.27"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
