[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "SQLite persistence layer: schema, migrations, and typed query functions."
license = "GPL-3.0-only"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
